scripts/nohup_2018.out
nohup: ignoring input

Processing MASTER_FIXED.C(2018)...
Info in <TUnixSystem::ACLiC>: creating shared library /data1/avenkate/JpsiLambda_RESTART/scripts/./Trigger_C.so
input_line_10:1:10: fatal error: '/data1/avenkate/JpsiLambda_RESTART/scripts/Trigger_C_ACLiC_linkdef.h' file not found
#include "/data1/avenkate/JpsiLambda_RESTART/scripts/Trigger_C_ACLiC_linkdef.h"
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Error in <ACLiC>: Dictionary generation failed!
input_line_16:2:3: error: use of undeclared identifier 'Trigger'
 (Trigger(2, 2018, 1, 0, 0, 1, 1))
  ^
Error in <HandleInterpreterException>: Error evaluating expression (Trigger(2, 2018, 1, 0, 0, 1, 1)).
Execution of your code was aborted.
Info in <TUnixSystem::ACLiC>: creating shared library /data1/avenkate/JpsiLambda_RESTART/scripts/./Sanity_C.so
WD = /data1/avenkate/JpsiLambda_RESTART
